     `vm-presentation-minor-modes' control the minor modes to be used with
     presentation text prepared by other tools such as emacs-w3m.  The
     old variable `vm-w3m-use-w3m-minor-mode-map' is obsolete.

   * The variable `vm-mutable-frames' renamed to
     `vm-mutable-frame-configuration' to convey its sense better.  The old
     name still works.

   IMPROVEMENTS

   * New variable `vm-mime-multipart/related-show-method' to force the
     display of MIME multipart/related attachments.

   * VM-Pcrisis extended to handle `vm-mail-from-folder'.

   * New variable `vm-subject-tag-prefix' allows the subject tags added by
     mailing lists to be ignored during sorting etc. (similar to
     `vm-subject-ignored-prefix').  Another variable
     `vm-summary-strip-subject-tags' removes them from summary lines as well.

   * New variable `vm-save-using-auto-folders' (default t), can be used to
     turn off auto-folder suggestions during message save.

   * New variable (actually added in 8.2.0a)
     `vm-fill-paragraphs-containing-long-lines-in-reply' which specifies the
     maximum line length beyond which filling should be done in composed
     messages (just before they are sent).

   * Newly documented command `vm-fill-long-lines-in-reply' fills a message
     being composed, along with its included text.

   * International character sets supported in IMAP mailbox names.

VM 8.2.0b  (2011-12-28)

  CHANGES

   * New customization variable `vm-spam-score-headers' allows the
     extraction of spam scores.  (Replaces the former variable
     `vm-vs-spam-score-headers' used by vm-avirtual.el.) 

   * The variable `vm-mime-alternative-select-method' renamed to
     `vm-mime-alternative-show-method' to make it clear that it only applies
     to the viewing of messages.  The new variable
     `vm-mime-alternative-yank-method' controls the selection of
     alternatives for citation in replies.
